@startuml

title __AI's Class Diagram__\n

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class AnimalVision {
              - grass : double[]
              - hares : double[]
              - wolfes : double[]
              - land : double[]
              - water : double[]
              + AnimalVision()
              + getjoined()
          }
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class Brain {
              + Brain()
              + Brain()
              + breed()
              + makeDecision()
          }
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class DoubleToGrayCode {
              {static} - minValue : int
              {static} - maxValue : int
              {static} - size : int
              {static} - bits : int
              {static} - pieces : int
              {static} + doubleToGC()
              {static} + gCToDouble()
          }
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class Genotype {
              - genes : int[]
              + Genotype()
              ~ getGenes()
              + breed()
              - crossover()
              {static} - arrayExchange()
              {static} - bitExchange()
              - mutation()
          }
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class NeuralNetwork {
              - inputLayer : double[][]
              - innerLayers : double[][][]
              - outputLayer : double[][]
              - inputSize : int
              - innerSize : int
              - outputSize : int
              + NeuralNetwork()
              + NeuralNetwork()
              + genotype()
              + calculate()
              {static} - activationF()
          }
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        package com.dekinci.eden.model.animal.ai {
          class VisionFactory {
              - animalSight : int
              + VisionFactory()
              + seeBlocks()
              + seeGrass()
              + seeAnimals()
              - getPoint()
          }
        }
      }
    }
  }
  

  Brain o-- NeuralNetwork : neuralNetwork
  VisionFactory o-- Coordinate : c
  VisionFactory o-- WorldMap : worldMap
  VisionFactory o-- AnimalManager : manager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
